# pylogue

./: .gitignore  .sesskey  .travis.yml  AUTHORS.md  CONTRIBUTING.md  Jenkinsfile-fe  Makefile  README.md  eb-db-schema.sql  insurance-db-schema.sql  ipl-dashboard-agent.py  llms.txt  mkdocs.yml  pyproject.toml  salesforce-agent.py  settings.ini  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci-cd.yml
_docs/: 0-Card.html  0-Card.md  0-card.html.md  1-Session.html  1-Session.md  2-Service.html  2-Service.md  3-Renderer.html  3-Renderer.md  4-chatapp.html  4-chatapp.html.md  5-examples.html  6-jupyterexample.html  6-jupyterexample.html.md  index.html  index.html.md  sitemap.xml
_proc/: 0-Card.html.md  0-Card.ipynb  1-Session.html.md  1-Session.ipynb  2-Service.html.md  2-Service.ipynb  3-Renderer.html.md  3-Renderer.ipynb  4-ChatApp.ipynb  5-Examples.ipynb  6-JupyterExample.ipynb  index.ipynb  nbdev.yml  sidebar.yml  sidebar.yml.bak
_proc/.quarto/project-cache/: deno-kv-file
_proc/.quarto/xref/: 238b4e5d  5a946adc  7c7d59c7  INDEX  ae500a28  b0f4ea03  b17a6d60  fe8064d7
_proc/_docs/: 0-Card.html  1-Session.html  2-Service.html  3-Renderer.html  3-Renderer.md  4-chatapp.html  5-examples.html  index.html  sitemap.xml
docs/: 0-card.html  0-card.html.md  3-Renderer.html  3-Renderer.md  4-chatapp.html  4-chatapp.html.md  5-examples.html.md  architecture.md  conversation-import-export.md  index.md  pylogue_integration_manual.md  sitemap.xml
nbs/: .sesskey  0-Card.ipynb  1-Session.ipynb  2-Service.ipynb  3-Renderer.ipynb  4-ChatApp.ipynb  5-Examples.ipynb  6-JupyterExample.ipynb  index.ipynb
scripts/: 4-code-assistant.py  5-supply-chain-rca.py  README.md  __init__.py  dummy-chat.py
scripts/agents/: haiku.py
scripts/agents/ipl/: main.py
scripts/agents/salesforce/: main.py
scripts/examples/ai/: __init__.py  agno_app.py  haiku.py  haiku_app.py  pydantic-ai.py  pydantic_ai_app.py  pylogue_demo.py  pylogue_demo_app.py
scripts/examples/ai/agno/: f1_app.py  haiku_chat.py  iirm_app.py
scripts/examples/ai/pydanticai/: haiku_app.py  haiku_chat.py  iirm_app.py  optinn_app.py  optinn_chat.py
scripts/examples/basic-functionality/: .sesskey  1-echo-bot.py  2-magic-assistant.py  3-smart-assistant.py  4-code-assistant.py  5-supply-chain-rca.py  README.md
scripts/examples/chat_app_with_histories/: chat_app.db  factory.py  main.py
scripts/examples/chat_app_with_histories/static/: chat_app.css  chat_app.js
src/: pylogue.html  pyproject.toml
src/pylogue/: __init__.py  __pre_init__.py  _modidx.py  cards.py  chat.py  chatapp.py  core.py  dashboarding.py  design_system.py  embeds.py  minimal_stream.py  renderer.py  service.py  session.py  shell.py
src/pylogue/integrations/: __init__.py  agno.py  common.py  pydantic_ai.py
src/pylogue/legacy/: cards.py  chat.py  chatapp.py  renderer.py
src/pylogue/static/: pylogue-core.css  pylogue-core.js  pylogue-markdown.js
tests/: __init__.py  test_agno_integration.py  test_pylogue.py
