[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylogue"
version = "0.3.25"
description = "A Chatbot UI built for AI agents"
readme = "README.rst"
authors = [
  {name = "Yeshwanth Reddy", email = "yyeshr@gmail.com"}
]
maintainers = [
  {name = "Yeshwanth Reddy", email = "yyeshr@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer",
  "nbdev",
  "mkdocs-material>=9.6.18",
  "mkdocs-mermaid2-plugin>=1.2.1",
  "mkdocs-awesome-pages-plugin>=2.10.1",
  "mkdocs-minify-plugin>=0.8.0",
  "mkdocs-git-revision-date-localized-plugin>=1.4.7",
  "pymdown-extensions>=10.16.1",
  "python-fasthtml>=0.12.29",
  "monsterui",
  "logfire>=4.20.0",
  "pydantic-ai>=1.48.0",
  "fastsql>=2.1.2",
  "duckdb>=1.4.4",
  "altair>=6.0.0",
  "pandas>=3.0.0",
  "simple-salesforce>=1.12.9",
  "authlib>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/sizhky/pylogue/issues"
changelog = "https://github.com/sizhky/pylogue/blob/master/changelog.md"
homepage = "https://github.com/sizhky/pylogue"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.scripts]
pylogue = "pylogue:cli"

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
