[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylogue"
version = "0.3.37"
description = "A Chatbot UI built for AI agents"
readme = "README.rst"
authors = [
  {name = "Yeshwanth Reddy", email = "yyeshr@gmail.com"}
]
maintainers = [
  {name = "Yeshwanth Reddy", email = "yyeshr@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer",
  "python-fasthtml>=0.12.29",
  "monsterui",
  "fastsql>=2.1.2",
  "authlib>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]
pydantic-ai = [
    "logfire>=4.22.0",
    "pydantic-ai>=1.56.0",
]
agno = [
    "agno>=2.4.8",
]
all = [
  "pydantic-ai",
  "agno",
]


[project.urls]

bugs = "https://github.com/sizhky/pylogue/issues"
changelog = "https://github.com/sizhky/pylogue/blob/master/changelog.md"
homepage = "https://github.com/sizhky/pylogue"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.scripts]
pylogue = "pylogue:cli"

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
